--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "create-react-class": "^15.6.2",
+    "draft-js-plugins-editor": "2.1.1",
     "immutable": "^3.8.1",
     "invariant": "^2.2.1",
     "prop-types": "^15.6.0"
